<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/page_bg3"
    android:id="@+id/rowLayout">

    <TextView
        android:id="@+id/row_model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_margin"
        android:text="@string/def_car_model"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_plates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_margin"
        android:layout_marginVertical="@dimen/row_margin"
        android:text="@string/def_car_no_plate"
        android:textColor="@color/plates"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_make"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/def_car_make"
        android:textColor="@color/make"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_model" />

    <TextView
        android:id="@+id/row_fuel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_margin"
        android:text="@string/petrol"
        android:textColor="@color/fuel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/row_make" />

    <TextView
        android:id="@+id/row_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_margin"
        android:gravity="center"
        android:text="@string/def_car_date"
        android:textColor="@color/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/row_owner"
        app:layout_constraintStart_toEndOf="@id/row_fuel" />

    <TextView
        android:id="@+id/row_owner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/def_margin"
        android:text="@string/def_car_owner"
        android:textColor="@color/owner"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>