<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nest_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/submit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                tools:context=".fragments.entry.FuelFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/no_plate_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/number_plate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/no_plate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:maxLength="12"
                        android:cursorVisible="false"
                        android:maxLines="1"
                        android:padding="@dimen/def_padding" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/date_fueled"
                    app:endIconDrawable="@drawable/date_icon"
                    app:endIconMode="custom"
                    app:endIconScaleType="center"
                    app:endIconTint="@color/colorAccent2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/no_plate_wrapper">

                    <AutoCompleteTextView
                        android:id="@+id/date_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:maxLines="1"
                        android:padding="@dimen/def_padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/make_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/car_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_wrapper">

                    <AutoCompleteTextView
                        android:id="@+id/make_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:padding="@dimen/def_padding" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/capacity_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/fuel_capacity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/make_wrapper">

                    <AutoCompleteTextView
                        android:id="@+id/capacity_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:text="40"
                        android:padding="@dimen/def_padding" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fuel_quantity_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/fuel_quantity"
                    app:endIconDrawable="@drawable/fuel_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorAccent2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/capacity_wrapper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantity_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:text="@string/default_quantity" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fuel_type_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin2"
                    android:text="@string/fuel_type"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fuel_quantity_wrapper" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/def_margin"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fuel_type_label">

                    <RadioButton
                        android:id="@+id/petrol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/petrol"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/diesel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/def_margin"
                        android:text="@string/diesel"
                        android:textSize="15sp" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/price"
                    app:endIconDrawable="@drawable/unit_price_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorAccent2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_group">

                    <AutoCompleteTextView
                        android:id="@+id/price_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:padding="12dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/total_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:hint="@string/total"
                    app:endIconDrawable="@drawable/total_amount_ic"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorAccent2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price_wrapper">

                    <AutoCompleteTextView
                        android:id="@+id/total_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:padding="@dimen/def_padding"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:textSize="@dimen/btn_textSize"
            android:layout_marginVertical="@dimen/submit_btn_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nest_scroll" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>